fix: swagger doc to access postID from URLParams
